--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
         reader.onload = function(){
           var text = reader.result;
           var $editor = $('textarea');
-          $editor.html($editor.html() + ';' + text);
-
-          // prevent always upload the first file.
-          var $input = $('input.upload');
-          $input.replaceWith($input.clone(true));
+          $editor.val($editor.val() + ';' + text);
         };
+
+        // prevent always upload the first file.
+        var $input = $('input.upload');
+        $input.replaceWith($input.clone(true));
+
         reader.readAsText(input.files[0]);
       });
 
